--- a/transformers/pipelines.ipynb
+++ b/transformers/pipelines.ipynb
@@ -58,55 +58,28 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "b9c38e82-e8f6-4af0-b257-b46f446aa249",
-   "metadata": {
-    "tags": []
-   },
-   "source": [
-    "## transformers 自定义模型下载的路径\n",
-    "\n",
-    "在transformers自定义模型下载的路径方法\n",
-    "\n",
-    "```python\n",
-    "import os\n",
-    "\n",
-    "os.environ['HF_HOME'] = '/mnt/new_volume/hf'\n",
-    "os.environ['HF_HUB_CACHE'] = '/mnt/new_volume/hf/hub'\n",
-    "```"
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 1,
-   "id": "9684ec5f-9460-4876-9883-69380eacb0e7",
+   "execution_count": 11,
+   "id": "83b0102e-5641-4f85-bb14-250d22fd3f9b",
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "No model was supplied, defaulted to distilbert-base-uncased-finetuned-sst-2-english and revision af0f99b (https://huggingface.co/distilbert-base-uncased-finetuned-sst-2-english).\n",
-      "Using a pipeline without specifying a model name and revision in production is not recommended.\n"
-     ]
-    },
-    {
      "data": {
       "text/plain": [
-       "[{'label': 'NEGATIVE', 'score': 0.8957212567329407}]"
+       "[{'label': 'culture', 'score': 0.3742872476577759}]"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "from transformers import pipeline\n",
-    "\n",
-    "# 仅指定任务时，使用默认模型（不推荐）\n",
-    "pipe = pipeline(\"sentiment-analysis\")\n",
-    "pipe(\"今儿上海可真冷啊\")"
+    "from transformers import AutoModelForSequenceClassification,AutoTokenizer,pipeline\n",
+    "model = AutoModelForSequenceClassification.from_pretrained('uer/roberta-base-finetuned-chinanews-chinese')\n",
+    "tokenizer = AutoTokenizer.from_pretrained('uer/roberta-base-finetuned-chinanews-chinese')\n",
+    "text_classification = pipeline('sentiment-analysis', model=model, tokenizer=tokenizer)\n",
+    "text_classification(\"我这个月加了四周的班\")\n"
    ]
   },
   {
@@ -119,46 +92,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 12,
    "id": "ee67f529-3d32-4834-b29a-e51a65cf4d49",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[{'label': 'NEGATIVE', 'score': 0.9238728880882263}]"
+       "[{'label': 'financial news', 'score': 0.9814700484275818}]"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "pipe(\"我觉得这家店蒜泥白肉的味道一般\")"
+    "text_classification(\"我今年年终奖拿了10个月\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 13,
    "id": "4e104034-94ca-4370-8d35-438501c29ead",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[{'label': 'NEGATIVE', 'score': 0.8578686118125916}]"
+       "[{'label': 'culture', 'score': 0.4310663044452667}]"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# 默认使用的模型 distilbert-base-uncased-finetuned-sst-2-english \n",
-    "# 并未针对中文做太多训练，中文的文本分类任务表现未必满意\n",
-    "pipe(\"你学东西真的好快，理论课一讲就明白了\")"
+    "text_classification(\"我的学习成绩是班里的第一名，但是这花费了我大量的时间，导致我没有任何娱乐生活了\")"
    ]
   },
   {
@@ -1196,7 +1167,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.5"
+   "version": "3.11.0"
   }
  },
  "nbformat": 4,
