--- a/transformers/pipelines.ipynb
+++ b/transformers/pipelines.ipynb
@@ -386,28 +386,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 11,
    "id": "8e028f36-2b50-4ae3-8dce-2f0ac685e8fb",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/root/miniconda3/lib/python3.11/site-packages/transformers/models/t5/tokenization_t5_fast.py:160: FutureWarning: This tokenizer was incorrectly instantiated with a model max length of 512 which will be corrected in Transformers v5.\n",
-      "For now, this behavior is kept to avoid breaking backwards compatibility when padding/encoding with `truncation is True`.\n",
-      "- Be aware that you SHOULD NOT rely on t5-base automatically truncating your input to 512 when padding/encoding.\n",
-      "- If you want to encode/pad to sequences longer than 512 you can either instantiate this tokenizer with `model_max_length` or pass `max_length` when encoding/padding.\n",
-      "- To avoid this warning, please instantiate this tokenizer with `model_max_length` set to your preferred value.\n",
-      "  warnings.warn(\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from transformers import pipeline\n",
     "\n",
     "summarizer = pipeline(task=\"summarization\",\n",
-    "                      model=\"t5-base\",\n",
+    "                      model=\"Falconsai/text_summarization\",\n",
     "                      min_length=8,\n",
     "                      max_length=32,\n",
     ")"
@@ -415,17 +402,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 12,
    "id": "8c760bbf-2ae4-4f84-bd5e-32c30ee6bd78",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[{'summary_text': 'the Transformer is the first sequence transduction model based entirely on attention . it replaces recurrent layers commonly used in encoder-decode'}]"
+       "[{'summary_text': 'Transformer is the first sequence transduction model based entirely on attention . For translation tasks, the Transformer can be trained significantly faster than architectures based'}]"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -439,7 +426,7 @@
     "    On both WMT 2014 English-to-German and WMT 2014 English-to-French translation tasks, we achieve a new state of the art. \n",
     "    In the former task our best model outperforms even all previously reported ensembles.\n",
     "    \"\"\"\n",
-    ")\n"
+    ")"
    ]
   },
   {
@@ -470,7 +457,7 @@
     "    Unlike earlier recurrent neural networks (RNN) that sequentially process inputs, transformers process entire sequences in parallel. \n",
     "    This allows the data scientists to use GPUs for training transformer-based LLMs, significantly reducing the training time.\n",
     "    '''\n",
-    ")\n"
+    ")"
    ]
   },
   {
