--- a/transformers/pipelines.ipynb
+++ b/transformers/pipelines.ipynb
@@ -431,17 +431,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 13,
    "id": "b50ff52b-e61e-40cd-ab66-a591dc0c3b0d",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[{'summary_text': 'large language models (LLMs) are very large deep learning models pre-trained on vast amounts of data . transformers are capable of un'}]"
+       "[{'summary_text': 'Large language models (LLM) are very large deep learning models that are pre-trained on vast amounts of data . The underlying transformer is'}]"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
