--- a/transformers/pipelines_advanced.ipynb
+++ b/transformers/pipelines_advanced.ipynb
@@ -59,13 +59,20 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
+      "/root/miniconda3/lib/python3.11/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n",
+      "model.safetensors: 100%|█████████████████████████████████████████████████████████████| 548M/548M [00:29<00:00, 18.3MB/s]\n",
+      "generation_config.json: 100%|███████████████████████████████████████████████████████████| 124/124 [00:00<00:00, 820kB/s]\n",
+      "vocab.json: 100%|██████████████████████████████████████████████████████████████████| 1.04M/1.04M [00:00<00:00, 1.32MB/s]\n",
+      "merges.txt: 100%|█████████████████████████████████████████████████████████████████████| 456k/456k [00:00<00:00, 760kB/s]\n",
+      "tokenizer.json: 100%|██████████████████████████████████████████████████████████████| 1.36M/1.36M [00:00<00:00, 2.23MB/s]\n",
       "Setting `pad_token_id` to `eos_token_id`:50256 for open-end generation.\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "[{'generated_text': \"Hugging Face is a community-based open-source platform for machine learning. It combines Python's fast performance in a very compact form and makes it easy to learn a complex field of machine learning.\"}]"
+       "[{'generated_text': 'Hugging Face is a community-based open-source platform for machine learning. It is the most powerful and most widely used Open Source platform on the planet. We strive to make Machine Learning the hottest issue in Machine Learning, enabling advanced users to solve'}]"
       ]
      },
      "execution_count": 1,
