--- a/transformers/fine-tune-quickstart.ipynb
+++ b/transformers/fine-tune-quickstart.ipynb
@@ -1194,8 +1194,59 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "6ee2580a-7a5a-46ae-a28b-b41e9e838eb1",
-   "metadata": {},
-   "outputs": [],
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/root/miniconda3/lib/python3.11/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n",
+      "Found cached dataset parquet (/root/.cache/huggingface/datasets/parquet/yelp_review_full-9c7006f5a2e02666/0.0.0/2a3b91fbd88a2c90d1dbbb32b460cf621d31bd5b05b934492fdef7d8d6f236ec)\n",
+      "100%|██████████| 2/2 [00:01<00:00,  1.11it/s]\n",
+      "Loading cached processed dataset at /root/.cache/huggingface/datasets/parquet/yelp_review_full-9c7006f5a2e02666/0.0.0/2a3b91fbd88a2c90d1dbbb32b460cf621d31bd5b05b934492fdef7d8d6f236ec/cache-6bf53480bd835972.arrow\n",
+      "Loading cached processed dataset at /root/.cache/huggingface/datasets/parquet/yelp_review_full-9c7006f5a2e02666/0.0.0/2a3b91fbd88a2c90d1dbbb32b460cf621d31bd5b05b934492fdef7d8d6f236ec/cache-185b5bad40a251f3.arrow\n",
+      "Loading cached processed dataset at /root/.cache/huggingface/datasets/parquet/yelp_review_full-9c7006f5a2e02666/0.0.0/2a3b91fbd88a2c90d1dbbb32b460cf621d31bd5b05b934492fdef7d8d6f236ec/cache-6bf53480bd835972.arrow\n",
+      "Loading cached processed dataset at /root/.cache/huggingface/datasets/parquet/yelp_review_full-9c7006f5a2e02666/0.0.0/2a3b91fbd88a2c90d1dbbb32b460cf621d31bd5b05b934492fdef7d8d6f236ec/cache-185b5bad40a251f3.arrow\n",
+      "Loading cached shuffled indices for dataset at /root/.cache/huggingface/datasets/parquet/yelp_review_full-9c7006f5a2e02666/0.0.0/2a3b91fbd88a2c90d1dbbb32b460cf621d31bd5b05b934492fdef7d8d6f236ec/cache-8f7ea6ccf6f548a7.arrow\n",
+      "Loading cached shuffled indices for dataset at /root/.cache/huggingface/datasets/parquet/yelp_review_full-9c7006f5a2e02666/0.0.0/2a3b91fbd88a2c90d1dbbb32b460cf621d31bd5b05b934492fdef7d8d6f236ec/cache-bf94c6e17e194198.arrow\n",
+      "Some weights of BertForSequenceClassification were not initialized from the model checkpoint at bert-base-cased and are newly initialized: ['classifier.bias', 'classifier.weight']\n",
+      "You should probably TRAIN this model on a down-stream task to be able to use it for predictions and inference.\n",
+      "/root/miniconda3/lib/python3.11/site-packages/torch/nn/parallel/_functions.py:68: UserWarning: Was asked to gather along dimension 0, but all input tensors were scalars; will instead unsqueeze and return a vector.\n",
+      "  warnings.warn('Was asked to gather along dimension 0, but all '\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "\n",
+       "    <div>\n",
+       "      \n",
+       "      <progress value='176' max='30471' style='width:300px; height:20px; vertical-align: middle;'></progress>\n",
+       "      [  176/30471 04:55 < 14:17:49, 0.59 it/s, Epoch 0.02/3]\n",
+       "    </div>\n",
+       "    <table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       " <tr style=\"text-align: left;\">\n",
+       "      <th>Epoch</th>\n",
+       "      <th>Training Loss</th>\n",
+       "      <th>Validation Loss</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "  </tbody>\n",
+       "</table><p>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "# 下载数据集\n",
     "from datasets import load_dataset\n",
@@ -1235,6 +1286,12 @@
     "\n",
     "model_dir = \"models/bert-base-cased-finetune-yelp\"\n",
     "\n",
+    "# logging_steps 默认值为500，根据我们的训练数据和步长，将其设置为100\n",
+    "training_args = TrainingArguments(output_dir=model_dir,\n",
+    "                                  per_device_train_batch_size=16,\n",
+    "                                  num_train_epochs=5,\n",
+    "                                  logging_steps=100)\n",
+    "\n",
     "# 设置评估指标\n",
     "import numpy as np\n",
     "import evaluate\n",
@@ -1252,7 +1309,7 @@
     "\n",
     "training_args = TrainingArguments(output_dir=model_dir,\n",
     "                                  evaluation_strategy=\"epoch\", \n",
-    "                                  per_device_train_batch_size=128,\n",
+    "                                  per_device_train_batch_size=16,\n",
     "                                  num_train_epochs=3,\n",
     "                                  logging_steps=30)\n",
     "\n",
@@ -1270,8 +1327,70 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "141a2abc-b747-4da2-a422-8a9a3f923cb2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "small_test_dataset = tokenized_datasets[\"test\"].shuffle(seed=64).select(range(100))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "436be413-ed08-4764-b34f-0d27189740da",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/root/miniconda3/lib/python3.11/site-packages/torch/nn/parallel/_functions.py:68: UserWarning: Was asked to gather along dimension 0, but all input tensors were scalars; will instead unsqueeze and return a vector.\n",
+      "  warnings.warn('Was asked to gather along dimension 0, but all '\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "\n",
+       "    <div>\n",
+       "      \n",
+       "      <progress value='4' max='4' style='width:300px; height:20px; vertical-align: middle;'></progress>\n",
+       "      [4/4 00:00]\n",
+       "    </div>\n",
+       "    "
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "{'eval_loss': 1.0772515535354614,\n",
+       " 'eval_accuracy': 0.57,\n",
+       " 'eval_runtime': 1.352,\n",
+       " 'eval_samples_per_second': 73.967,\n",
+       " 'eval_steps_per_second': 2.959,\n",
+       " 'epoch': 3.0}"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "trainer.evaluate(small_test_dataset)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ddfd6bae-be4e-4ba8-a454-9583ff14bd99",
    "metadata": {},
    "outputs": [],
    "source": []
