--- a/transformers/fine-tune-quickstart.ipynb
+++ b/transformers/fine-tune-quickstart.ipynb
@@ -1224,8 +1224,8 @@
        "\n",
        "    <div>\n",
        "      \n",
-       "      <progress value='176' max='30471' style='width:300px; height:20px; vertical-align: middle;'></progress>\n",
-       "      [  176/30471 04:55 < 14:17:49, 0.59 it/s, Epoch 0.02/3]\n",
+       "      <progress value='678' max='30471' style='width:300px; height:20px; vertical-align: middle;'></progress>\n",
+       "      [  678/30471 18:58 < 13:56:11, 0.59 it/s, Epoch 0.07/3]\n",
        "    </div>\n",
        "    <table border=\"1\" class=\"dataframe\">\n",
        "  <thead>\n",
@@ -1245,6 +1245,14 @@
      },
      "metadata": {},
      "output_type": "display_data"
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/root/miniconda3/lib/python3.11/site-packages/torch/nn/parallel/_functions.py:68: UserWarning: Was asked to gather along dimension 0, but all input tensors were scalars; will instead unsqueeze and return a vector.\n",
+      "  warnings.warn('Was asked to gather along dimension 0, but all '\n"
+     ]
     }
    ],
    "source": [
