--- a/transformers/fine-tune-QA.ipynb
+++ b/transformers/fine-tune-QA.ipynb
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {
     "id": "zVvslsfMIrIh"
    },
@@ -48,18 +48,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {
     "id": "IreSlFmlIrIm"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/root/miniconda3/lib/python3.11/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n"
+     ]
+    }
+   ],
    "source": [
     "from datasets import load_dataset"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -128,74 +137,61 @@
    },
    "outputs": [
     {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "ad7fc91eff1e463b8585cfa6406b5c64",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Downloading readme:   0%|          | 0.00/7.83k [00:00<?, ?B/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Downloading readme: 100%|██████████| 7.83k/7.83k [00:00<00:00, 28.4MB/s]\n"
+     ]
     },
     {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "99f62a5aa0ec4d34885ac3b7eac6c873",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Downloading data:   0%|          | 0.00/14.5M [00:00<?, ?B/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Downloading and preparing dataset None/plain_text to /root/.cache/huggingface/datasets/parquet/plain_text-b38df7ca980d7b55/0.0.0/2a3b91fbd88a2c90d1dbbb32b460cf621d31bd5b05b934492fdef7d8d6f236ec...\n"
+     ]
     },
     {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "392227a75a954ee5b4cef6c994ed5989",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Downloading data:   0%|          | 0.00/1.82M [00:00<?, ?B/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Downloading data files:   0%|          | 0/2 [00:00<?, ?it/s]\n",
+      "Downloading data:   0%|          | 0.00/14.5M [00:00<?, ?B/s]\u001b[A\n",
+      "Downloading data:   0%|          | 19.5k/14.5M [00:00<02:23, 100kB/s]\u001b[A\n",
+      "Downloading data:   0%|          | 52.2k/14.5M [00:00<01:44, 137kB/s]\u001b[A\n",
+      "Downloading data:   1%|          | 139k/14.5M [00:00<00:52, 273kB/s] \u001b[A\n",
+      "Downloading data:   2%|▏         | 313k/14.5M [00:00<00:27, 508kB/s]\u001b[A\n",
+      "Downloading data:   5%|▍         | 662k/14.5M [00:01<00:14, 944kB/s]\u001b[A\n",
+      "Downloading data:   9%|▉         | 1.34M/14.5M [00:01<00:07, 1.75MB/s]\u001b[A\n",
+      "Downloading data:  19%|█▉        | 2.71M/14.5M [00:01<00:03, 3.44MB/s]\u001b[A\n",
+      "Downloading data:  37%|███▋      | 5.41M/14.5M [00:01<00:01, 6.62MB/s]\u001b[A\n",
+      "Downloading data:  63%|██████▎   | 9.17M/14.5M [00:01<00:00, 10.4MB/s]\u001b[A\n",
+      "Downloading data: 100%|██████████| 14.5M/14.5M [00:02<00:00, 7.13MB/s]\u001b[A\n",
+      "Downloading data files:  50%|█████     | 1/2 [00:03<00:03,  3.86s/it]\n",
+      "Downloading data:   0%|          | 0.00/1.82M [00:00<?, ?B/s]\u001b[A\n",
+      "Downloading data:   1%|          | 16.4k/1.82M [00:00<00:22, 79.9kB/s]\u001b[A\n",
+      "Downloading data:   3%|▎         | 54.3k/1.82M [00:00<00:12, 146kB/s] \u001b[A\n",
+      "Downloading data:   8%|▊         | 141k/1.82M [00:00<00:06, 278kB/s] \u001b[A\n",
+      "Downloading data:  17%|█▋        | 315k/1.82M [00:00<00:02, 502kB/s]\u001b[A\n",
+      "Downloading data:  36%|███▋      | 663k/1.82M [00:01<00:01, 950kB/s]\u001b[A\n",
+      "Downloading data: 100%|██████████| 1.82M/1.82M [00:01<00:00, 1.49MB/s]\u001b[A\n",
+      "Downloading data files: 100%|██████████| 2/2 [00:07<00:00,  3.68s/it]\n",
+      "Extracting data files: 100%|██████████| 2/2 [00:00<00:00, 1962.25it/s]\n",
+      "                                                                                        \r"
+     ]
     },
     {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "b42c99de3be749adafbbf467b762f27d",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Generating train split:   0%|          | 0/87599 [00:00<?, ? examples/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Dataset parquet downloaded and prepared to /root/.cache/huggingface/datasets/parquet/plain_text-b38df7ca980d7b55/0.0.0/2a3b91fbd88a2c90d1dbbb32b460cf621d31bd5b05b934492fdef7d8d6f236ec. Subsequent calls will reuse this data.\n"
+     ]
     },
     {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "4b499b9bdbff4728b437d30eaed7985c",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Generating validation split:   0%|          | 0/10570 [00:00<?, ? examples/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 2/2 [00:00<00:00, 438.80it/s]\n"
+     ]
     }
    ],
    "source": [
@@ -213,7 +209,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {
     "id": "GWiVUF0jIrIv",
     "outputId": "35e3ea43-f397-4a54-c90c-f2cf8d36873e"
@@ -234,7 +230,7 @@
        "})"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -270,7 +266,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {
     "id": "X6HrpprwIrIz",
     "outputId": "d7670bc0-42e4-4c09-8a6a-5c018ded7d95"
@@ -286,7 +282,7 @@
        " 'answers': {'text': ['Saint Bernadette Soubirous'], 'answer_start': [515]}}"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
