Update fine tune quickstart

--- a/transformers/fine-tune-quickstart.ipynb
+++ b/transformers/fine-tune-quickstart.ipynb
@@ -1489,7 +1489,15 @@
    "execution_count": 2,
    "id": "141a2abc-b747-4da2-a422-8a9a3f923cb2",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Loading cached shuffled indices for dataset at /root/.cache/huggingface/datasets/parquet/yelp_review_full-9c7006f5a2e02666/0.0.0/2a3b91fbd88a2c90d1dbbb32b460cf621d31bd5b05b934492fdef7d8d6f236ec/cache-a26877380c4b53fd.arrow\n"
+     ]
+    }
+   ],
    "source": [
     "small_test_dataset = tokenized_datasets[\"test\"].shuffle(seed=64).select(range(100))\n"
    ]
@@ -1529,11 +1537,11 @@
     {
      "data": {
       "text/plain": [
-       "{'eval_loss': 1.0772515535354614,\n",
-       " 'eval_accuracy': 0.57,\n",
-       " 'eval_runtime': 1.352,\n",
-       " 'eval_samples_per_second': 73.967,\n",
-       " 'eval_steps_per_second': 2.959,\n",
+       "{'eval_loss': 0.8719936609268188,\n",
+       " 'eval_accuracy': 0.66,\n",
+       " 'eval_runtime': 1.3325,\n",
+       " 'eval_samples_per_second': 75.045,\n",
+       " 'eval_steps_per_second': 3.002,\n",
        " 'epoch': 3.0}"
       ]
      },
@@ -1548,8 +1556,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "ddfd6bae-be4e-4ba8-a454-9583ff14bd99",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "trainer.save_model(model_dir)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "21520e01-a1ab-43a1-8f20-6b5659b26189",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "trainer.save_state()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8f10a56d-a297-498d-92a0-6bd3023539d8",
    "metadata": {},
    "outputs": [],
    "source": []
